--- a/QuranX.Web/Views/QuranChapters/Index.cshtml
+++ b/QuranX.Web/Views/QuranChapters/Index.cshtml
@@ -1,18 +1,33 @@
 ﻿@using QuranX.Shared.Models
-@model IEnumerable<Chapter>
+@using QuranX.Web.Models
+@model IEnumerable<ChapterAndVerseReferenceSelection>
 
 @{
-    ViewBag.Title = "The Noble Qur'an";
+	ViewBag.Title = "The Noble Qur'an";
 }
 
 <h1>@ViewBag.Title</h1>
 <ol class="quran__chapter-list">
-	@foreach (Chapter chapter in Model)
+	@foreach (ChapterAndVerseReferenceSelection item in Model)
 	{
 		<li>
-			<a href="/@(chapter.ChapterNumber).1">
-				@chapter.EnglishName - @chapter.ArabicName
+			@{ 
+				string chapterId = "Chapter" + item.Chapter.ChapterNumber;
+			}
+			<a href="#@chapterId" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="@chapterId">
+				@item.Chapter.EnglishName - @item.Chapter.ArabicName
 			</a>
+			
+			<ul id="@chapterId" class="quran__verse-list collapse">
+				@foreach (VerseReference verseReference in item.VerseReferences)
+				{
+					<li>
+						<a href="@(item.Chapter.ChapterNumber).@(verseReference.Verse)">
+							@verseReference.Verse
+						</a>
+					</li>
+				}
+			</ul>
 		</li>
 	}
 </ol>
