--- a/QuranX.Web/Views/QuranChapters/Index.cshtml
+++ b/QuranX.Web/Views/QuranChapters/Index.cshtml
@@ -11,13 +11,13 @@
 	@foreach (ChapterAndVerseReferenceSelection item in Model)
 	{
 		<li>
-			@{ 
+			@{
 				string chapterId = "Chapter" + item.Chapter.ChapterNumber;
 			}
 			<a href="#@chapterId" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="@chapterId">
 				@item.Chapter.EnglishName - @item.Chapter.ArabicName
 			</a>
-			
+
 			<ul id="@chapterId" class="quran__verse-list collapse">
 				@foreach (VerseReference verseReference in item.VerseReferences)
 				{
@@ -32,3 +32,10 @@
 	}
 </ol>
 
+@section scripts {
+	<script>
+		$(function () {
+			$(this).scrollTop(0);
+		});
+	</script>
+}
