--- a/QuranX.Web/Views/Commentary/Index.cshtml
+++ b/QuranX.Web/Views/Commentary/Index.cshtml
@@ -1,7 +1,42 @@
-﻿
+﻿@using QuranX.Shared.Models
+@using QuranX.Web.Models
+@using QuranX.Web.Views.Commentary
+@model ViewModel
+
 @{
-    ViewBag.Title = "Index";
+	ViewBag.Title = Model.Commentator.Description;
 }
 
-<h2>Index</h2>
+<h1>@ViewBag.Title</h1>
+<ol class="quran__chapter-list">
+	@foreach (ChapterAndVerseRangeReferenceSelection item in Model.Chapters)
+	{
+		<li>
+			@{
+				string chapterId = "Chapter" + item.Chapter.ChapterNumber;
+			}
+			<a href="#@chapterId" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="@chapterId">
+				@item.Chapter.EnglishName - @item.Chapter.ArabicName
+			</a>
 
+			<ul id="@chapterId" class="quran__verse-list collapse">
+				@foreach (VerseRangeReference verseRangeReference in item.VerseRangeReferences)
+				{
+					<li>
+						<a href="/Tafsir/@Model.Commentator.Code/@(item.Chapter.ChapterNumber).@(verseRangeReference.FirstVerse)">
+							@verseRangeReference.ToString()
+						</a>
+					</li>
+				}
+			</ul>
+		</li>
+	}
+</ol>
+
+@section scripts {
+	<script>
+		$(function () {
+			$(this).scrollTop(0);
+		});
+	</script>
+}
