--- a/QuranX.Web/Views/Shared/_Layout.cshtml
+++ b/QuranX.Web/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li>@Html.ActionLink("Commentaries", "Index", "Commentators")</li>
+					<li>@Html.ActionLink("Hadiths", "Index", "HadithCollections")</li>
 				</ul>
 			</div>
 		</div>
