--- a/QuranX.Web/Views/HadithCollections/Index.cshtml
+++ b/QuranX.Web/Views/HadithCollections/Index.cshtml
@@ -10,7 +10,7 @@
 	@foreach (HadithCollection collection in Model)
 	{
 		<li>
-			<a href="/Hadith/@collection.Code/@collection.PrimaryIndexCode">
+			<a href="/Hadith/@collection.Code/@collection.PrimaryReferenceCode">
 				<div class="row">
 					<span class="col-xs-4 col-sm-3 col-md-2">@collection.Code</span>
 					<span class="col-xs-8 col-sm-9 col-md-10">@collection.Name</span>
