--- a/QuranX.Web/Views/QuranVerses/Index.cshtml
+++ b/QuranX.Web/Views/QuranVerses/Index.cshtml
@@ -8,7 +8,7 @@
 }
 
 <h1>@ViewBag.Title</h1>
-@{ Html.RenderPartial("SelectChapterAndVerse", Model.AllVerses); }
+@{ Html.RenderPartial("SelectChapterAndVerse", Model.SelectChapterAndVerse); }
 @foreach (ChapterAndVerseSelection group in Model.DisplayVerses)
 {
 	<h2>@group.Chapter.EnglishName - @group.Chapter.ArabicName</h2>
