--- a/QuranX.Web/Views/Commentators/Index.cshtml
+++ b/QuranX.Web/Views/Commentators/Index.cshtml
@@ -11,7 +11,10 @@
 	{
 		<li>
 			<a href="/Tafsir/@commentator.Code">
-				@commentator.Description
+				<div class="row">
+					<span class="col-xs-4 col-sm-3 col-md-2">@commentator.Code</span>
+					<span class="col-xs-8 col-sm-9 col-md-10">@commentator.Description</span>
+				</div>
 			</a>
 		</li>
 	}
