--- a/QuranX.Web/Views/Shared/_Layout.cshtml
+++ b/QuranX.Web/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
 	@Styles.Render("~/Content/css")
 	@Scripts.Render("~/bundles/jquery")
 	@Scripts.Render("~/bundles/modernizr")
+	@Scripts.Render("~/bundles/site")
 </head>
 <body>
 	<div class="navbar navbar-inverse navbar-fixed-top">
