--- a/QuranX.Web/Views/Shared/CommentaryView.cshtml
+++ b/QuranX.Web/Views/Shared/CommentaryView.cshtml
@@ -8,7 +8,7 @@
 }
 <div>
 	<h2>
-		@Model.Commentator.Description commentary for @verseCaption <a href="/@verse">@verse</a>
+		@Model.Commentator.Code - @Model.Commentator.Description commentary for @verseCaption <a href="/@verse">@verse</a>
 	</h2>
 	@foreach (string text in Model.Commentary.Text)
 	{
