--- a/QuranX.Web/Content/Site.css
+++ b/QuranX.Web/Content/Site.css
@@ -172,6 +172,7 @@
 	align-content: center;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 1em;
 }
 
 @media (max-width: 549px) {
@@ -250,6 +251,66 @@
 		font-size: 1.5rem;
 		font-weight: bold;
 	}
+}
+
+dl.count-and-label {
+	background-color: #fef2da;
+	padding: 0.25em 0.5em;
+	border-radius: 8px;
+	border: none;
+	color: hsl(40, 57%, 43%);
+	margin: 0px;
+	margin-right: 0.5em;
+	font-size: 0.75em;
+	display: inline-block;
+	box-shadow: 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+	dl.count-and-label dt {
+		font-weight: normal;
+		font-size: 0.75em;
+		text-align: center;
+		margin: 0px;
+		padding: 0px;
+	}
+
+	dl.count-and-label dd {
+		font-weight: bold;
+		font-size: 1.25em;
+		text-align: center;
+		margin: 0px;
+		padding: 0px;
+	}
+
+	dl > dd:not(:first-child) {
+		margin-top: 0.5em;
+	}
+
+dl.boxed {
+	border: 2px solid #ddd;
+	border-radius: 0.5em;
+	box-shadow: #f0f0f0 5px 5px;
+	padding: 0;
+}
+dl.boxed > dt {
+	background-color: #eee;
+	padding: 0.25em 0.5em;
+}
+
+dl.boxed > dd {
+	padding: 0 0.5em 0.5em 0.5em;
+}
+
+.verse-reference {
+	background-color: #fef2da;
+	padding: 0.25em 0.5em;
+	border-radius: 1em;
+	color: hsl(40, 57%, 43%);
+	margin: 0px;
+	margin-right: 1.25em;
+	font-size: 1.25em;
+	font-weight: bold;
+	box-shadow: 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 
