--- a/QuranX.Web/Views/Shared/_Layout.cshtml
+++ b/QuranX.Web/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
-					<li>@Html.RouteLink("Quran", "QuranVerses")</li>
+					<li><a href="/1.1">Quran</a></li>
 					<li>@Html.RouteLink("Commentaries", "Commentators")</li>
 					<li>@Html.RouteLink("Hadiths", "HadithCollections")</li>
 				</ul>
