--- a/QuranX.Web/Views/HadithIndex/HadithIndexHeader.cshtml
+++ b/QuranX.Web/Views/HadithIndex/HadithIndexHeader.cshtml
@@ -1,4 +1,5 @@
 ﻿@using QuranX.Web.Views.HadithIndex
+@using QuranX.Persistence.Models
 @model HadithIndexHeaderViewModel
 
 <h1>Hadith collection</h1>
@@ -15,4 +16,15 @@
 		}
 	}
 </h2>
+<ul class="hadith-reference-list">
+	@foreach(HadithReferenceDefinition referenceDefinition in Model.Collection.ReferenceDefinitions)
+	{
+		string cssClass = string.Compare(referenceDefinition.Code, Model.SelectedReferenceCode, true) == 0 ? "selected" : "";
+		<li>
+			<a href="/hadith/@Model.Collection.Code/@referenceDefinition.Code" class="@cssClass">
+				@referenceDefinition.Name
+			</a>
+		</li>
+	}
+</ul>
 
