--- a/QuranX.Web/Views/HadithIndex/Hadiths.cshtml
+++ b/QuranX.Web/Views/HadithIndex/Hadiths.cshtml
@@ -1,22 +1,34 @@
 ﻿@using QuranX.Web.Views.HadithIndex
-@using QuranX.Persistence.Models
 @model HadithsViewModel
 
 @{
-	ViewBag.Title = $"{Model.HadithIndexHeaderViewModel.Collection.Name} Hadiths";
+    ViewBag.Title = $"{Model.HadithIndexHeaderViewModel.Collection.Name} Hadiths";
 }
 
 @Html.Partial("HadithIndexHeader", Model.HadithIndexHeaderViewModel)
-@foreach(Hadith hadith in Model.Hadiths)
+@foreach (HadithViewModel hadithVM in Model.Hadiths)
 {
-	<div>
-		@foreach(string text in hadith.EnglishText)
-		{
-			<p>@text</p>
-		}
-		@foreach(string text in hadith.ArabicText)
-		{
-			<p>@text</p>
-		}
-	</div>
+    <div>
+        @foreach (string text in hadithVM.Hadith.EnglishText)
+        {
+            <p>@text</p>
+        }
+        @foreach (string text in hadithVM.Hadith.ArabicText)
+        {
+            <p>@text</p>
+        }
+    </div>
+    <div>
+        @foreach (KeyValuePair<string, string> reference in hadithVM.References)
+        {
+            <div class="hadith__reference">
+                <div class="hadith__reference-name">
+                    @reference.Key
+                </div>
+                <div class="hadith__reference-value">
+                    @reference.Value
+                </div>
+            </div>
+        }
+    </div>
 }
