--- a/QuranX.Web/Content/Site.css
+++ b/QuranX.Web/Content/Site.css
@@ -1,179 +1,10 @@
-﻿.quran__chapter-list {
-	margin: 0;
+﻿.hadith-index__list {
 	padding: 0;
 	list-style: none;
-	counter-reset: li;
-}
-
-	.quran__chapter-list > li {
-		border: 1px solid #aaa;
-		border-radius: 8px;
-		margin: 0 0 0.5em 0;
-		padding: 0.5em;
-		text-align: center;
-		counter-increment: li;
-	}
-
-		.quran__chapter-list > li > a:before {
-			content: counter(li);
-			display: inline-block;
-			position: absolute;
-			left: 3em;
-			vertical-align: middle;
-			font-size: 2rem;
-		}
-
-		.quran__chapter-list > li > a {
-			display: block;
-			font-size: 2rem;
-			text-decoration: none;
-		}
-
-.quran__verse-list {
-	padding: 0;
-	list-style: none;
-}
-
-	.quran__verse-list.collapsing {
-		transition-duration: 0s;
-	}
-
-	.quran__verse-list li {
-		margin: 0 2rem;
-	}
-
-@media (max-width: 349px) {
-	.quran__verse-list {
-		-webkit-column-count: 2;
-		-moz-column-count: 2;
-		-ms-column-count: 2;
-		column-count: 2;
-	}
-}
-
-@media (min-width: 350px) {
-	.quran__verse-list {
-		-webkit-column-count: 3;
-		-moz-column-count: 3;
-		-ms-column-count: 3;
-		column-count: 3;
-	}
-}
-
-@media (min-width: 450px) {
-	.quran__verse-list {
-		-webkit-column-count: 4;
-		-moz-column-count: 4;
-		-ms-column-count: 4;
-		column-count: 4;
-	}
-}
-
-@media (min-width: 550px) {
-	.quran__verse-list {
-		-webkit-column-count: 5;
-		-moz-column-count: 5;
-		-ms-column-count: 5;
-		column-count: 5;
-	}
-}
-
-@media (min-width: 650px) {
-	.quran__verse-list {
-		-webkit-column-count: 6;
-		-moz-column-count: 6;
-		-ms-column-count: 6;
-		column-count: 6;
-	}
-}
-
-@media (min-width: 750px) {
-	.quran__verse-list {
-		-webkit-column-count: 7;
-		-moz-column-count: 7;
-		-ms-column-count: 7;
-		column-count: 7;
-	}
-}
-
-@media (min-width: 850px) {
-	.quran__verse-list {
-		-webkit-column-count: 8;
-		-moz-column-count: 8;
-		-ms-column-count: 8;
-		column-count: 8;
-	}
-}
-
-@media (min-width: 950px) {
-	.quran__verse-list {
-		-webkit-column-count: 9;
-		-moz-column-count: 9;
-		-ms-column-count: 9;
-		column-count: 9;
-	}
-}
-
-@media (min-width: 1050px) {
-	.quran__verse-list {
-		-webkit-column-count: 10;
-		-moz-column-count: 10;
-		-ms-column-count: 10;
-		column-count: 10;
-	}
-}
-
-@media (min-width: 1150px) {
-	.quran__verse-list {
-		-webkit-column-count: 11;
-		-moz-column-count: 11;
-		-ms-column-count: 11;
-		column-count: 11;
-	}
-}
-
-@media (min-width: 1250px) {
-	.quran__verse-list {
-		-webkit-column-count: 12;
-		-moz-column-count: 12;
-		-ms-column-count: 12;
-		column-count: 12;
-	}
-}
-
-@media (min-width: 1350px) {
-	.quran__verse-list {
-		-webkit-column-count: 13;
-		-moz-column-count: 13;
-		-ms-column-count: 13;
-		column-count: 13;
-	}
-}
-
-@media (min-width: 1450px) {
-	.quran__verse-list {
-		-webkit-column-count: 14;
-		-moz-column-count: 14;
-		-ms-column-count: 14;
-		column-count: 14;
-	}
-}
-
-@media (min-width: 1550px) {
-	.quran__verse-list {
-		-webkit-column-count: 15;
-		-moz-column-count: 15;
-		-ms-column-count: 15;
-		column-count: 15;
-	}
-}
-
-
-
-
-.hadith-index__list {
-	padding: 0;
-	list-style: none;
+	-webkit-column-count: 1;
+	-moz-column-count: 1;
+	-ms-column-count: 1;
+	column-count: 1;
 }
 
 	.hadith-index__list.collapsing {
@@ -184,16 +15,7 @@
 		margin: 0 2rem;
 	}
 
-@media (max-width: 349px) {
-	.hadith-index__list {
-		-webkit-column-count: 1;
-		-moz-column-count: 1;
-		-ms-column-count: 1;
-		column-count: 1;
-	}
-}
-
-@media (min-width: 450px) {
+@media (min-width: 20rem) {
 	.hadith-index__list {
 		-webkit-column-count: 2;
 		-moz-column-count: 2;
@@ -202,7 +24,7 @@
 	}
 }
 
-@media (min-width: 650px) {
+@media (min-width: 30rem) {
 	.hadith-index__list {
 		-webkit-column-count: 3;
 		-moz-column-count: 3;
@@ -211,7 +33,7 @@
 	}
 }
 
-@media (min-width: 850px) {
+@media (min-width: 40rem) {
 	.hadith-index__list {
 		-webkit-column-count: 4;
 		-moz-column-count: 4;
@@ -220,7 +42,7 @@
 	}
 }
 
-@media (min-width: 1050px) {
+@media (min-width: 50rem) {
 	.hadith-index__list {
 		-webkit-column-count: 5;
 		-moz-column-count: 5;
@@ -229,7 +51,7 @@
 	}
 }
 
-@media (min-width: 1250px) {
+@media (min-width: 60rem) {
 	.hadith-index__list {
 		-webkit-column-count: 6;
 		-moz-column-count: 6;
@@ -238,7 +60,7 @@
 	}
 }
 
-@media (min-width: 1450px) {
+@media (min-width: 70rem) {
 	.hadith-index__list {
 		-webkit-column-count: 7;
 		-moz-column-count: 7;
@@ -247,7 +69,7 @@
 	}
 }
 
-@media (min-width: 1650px) {
+@media (min-width: 80rem) {
 	.hadith-index__list {
 		-webkit-column-count: 8;
 		-moz-column-count: 8;
@@ -256,7 +78,23 @@
 	}
 }
 
+@media (min-width: 90rem) {
+	.hadith-index__list {
+		-webkit-column-count: 9;
+		-moz-column-count: 9;
+		-ms-column-count: 9;
+		column-count: 9;
+	}
+}
 
+@media (min-width: 100rem) {
+	.hadith-index__list {
+		-webkit-column-count: 10;
+		-moz-column-count: 10;
+		-ms-column-count: 10;
+		column-count: 10;
+	}
+}
 
 
 .chapter-and-verse-selector {
@@ -411,7 +249,7 @@ dl.boxed {
 	margin-bottom: 1em;
 }
 
-@media(max-width: 35em) {
+@media(max-width: 30rem) {
 	.hadith-reference-list__item {
 		display: block;
 		float: none !important;
