--- a/QuranX.Web/Views/HadithIndex/HadithIndexHeader.cshtml
+++ b/QuranX.Web/Views/HadithIndex/HadithIndexHeader.cshtml
@@ -4,11 +4,11 @@
 
 <h1>Hadith collection</h1>
 <h2>
-	<a href="/Hadith/@Model.Collection.Code/@Model.Collection.PrimaryReferenceCode">
+	<a href="/Hadith/@Model.Collection.Code/@Model.SelectedReferenceCode">
 		@Model.Collection.Name
 	</a>
 	@{
-		string urlSoFar = $"/Hadith/{Model.Collection.Code}/{Model.Collection.PrimaryReferenceCode}/";
+		string urlSoFar = $"/Hadith/{Model.Collection.Code}/{Model.SelectedReferenceCode}/";
 		foreach (string urlPart in Model.ReferencePartNamesAndValues)
 		{
 			urlSoFar += urlPart + "/";
