--- a/QuranX.Web/Views/VerseCommentary/Index.cshtml
+++ b/QuranX.Web/Views/VerseCommentary/Index.cshtml
@@ -4,7 +4,7 @@
 
 @{
 	var verse = new VerseRangeReference(Model.CommentatorAndCommentary.Commentary.ChapterNumber, Model.CommentatorAndCommentary.Commentary.FirstVerseNumber, Model.CommentatorAndCommentary.Commentary.LastVerseNumber);
-	string verseCaption = verse.IsMultipleVerses ? "verses" : "verse";
+	string verseCaption = verse.IsMultipleVerses() ? "verses" : "verse";
 	ViewBag.Title = Model.CommentatorAndCommentary.Commentator.Description + $" commentary for {verseCaption} {verse}";
 }
 <h1>Verse commentary</h1>
