--- a/QuranX.Web/Views/CommentariesForVerse/Index.cshtml
+++ b/QuranX.Web/Views/CommentariesForVerse/Index.cshtml
@@ -5,11 +5,13 @@
 	ViewBag.Title = $"Commentaries for {Model.Chapter.ChapterNumber}.{Model.VerseNumber}";
 }
 
-<h1>
+<h1>The Quran</h1>
+<h2>
 	Commentaries for <a href="/@(Model.Chapter.ChapterNumber).@Model.VerseNumber">
 		@(Model.Chapter.ChapterNumber).@Model.VerseNumber
 	</a>
-</h1>
+</h2>
+<h3>@Model.Chapter.EnglishName - @Model.Chapter.ArabicName</h3>
 @Html.Partial("SelectChapterAndVerse", Model.SelectChapterAndVerse)
 @foreach (CommentatorAndCommentary commentatorAndCommentary in Model.Commentaries)
 {
