--- a/QuranX.Web/Views/VerseHadiths/Index.cshtml
+++ b/QuranX.Web/Views/VerseHadiths/Index.cshtml
@@ -4,11 +4,13 @@
 @{
 	ViewBag.Title = $"Hadiths for {Model.Chapter.ChapterNumber}.{Model.VerseNumber}";
 }
-<h1>
+<h1>The Quran</h1>
+<h2>
 	Hadiths for <a href="/@(Model.Chapter.ChapterNumber).@Model.VerseNumber">
 		@(Model.Chapter.ChapterNumber).@Model.VerseNumber
 	</a>
-</h1>
+</h2>
+<h3>@Model.Chapter.EnglishName - @Model.Chapter.ArabicName</h3>
 @foreach (HadithViewModel hadithVM in Model.Hadiths)
 {
 	@Html.Partial("HadithView", hadithVM)
