--- a/QuranX.Web/Views/VerseAnalysis/Index.cshtml
+++ b/QuranX.Web/Views/VerseAnalysis/Index.cshtml
@@ -13,18 +13,22 @@
 <h3>
 	@Model.Chapter.EnglishName - @Model.Chapter.ArabicName
 </h3>
+@{ Html.RenderPartial("SelectChapterAndVerse", Model.SelectChapterAndVerse); }
 <ul class="verse-analysis__word-list">
 	@foreach (var word in Model.Words)
 	{
+		string wordUrl = Url.RouteUrl("WordAnalysis", new { Word = QuranX.Web.ArabicHelper.Standardize(word.Arabic) });
 		<li class="verse-analysis__word row">
 			<a name="Word_@(Model.Chapter.ChapterNumber)_@(Model.VerseNumber)_(@word.WordNumber)"></a>
-			<div class="col-xs-1 verse-analysis__word-reference">
+			<div class="col-xs-6 verse-analysis__word-reference">
 				@Model.Chapter.ChapterNumber.@Model.VerseNumber.@word.WordNumber
 			</div>
-			<div class="col-xs-4 verse-analysis__word-text">
-				<div class="verse-analysis__word-text-image">
+			<div class="col-xs-6 verse-analysis__word-image">
+				<a href="@wordUrl	">
 					<img src="~/Content/Images/ArabicWords/@(Html.GetHexValues(word.Buckwalter)).png" alt="@word.Buckwalter" />
-				</div>
+				</a>
+			</div>
+			<div class="col-xs-6 verse-analysis__word-text">
 				<div class="verse-analysis__word-text-buckwalter">
 					@word.Buckwalter
 				</div>
@@ -32,16 +36,7 @@
 					@word.English
 				</div>
 			</div>
-			<div class="verse-analysis__arabic">
-				@Html.RouteLink(
-					 linkText: word.Arabic,
-					 routeName: "WordAnalysis",
-					 routeValues: new
-					 {
-						Word = QuranX.Web.ArabicHelper.Standardize(word.Arabic)
-					 })
-			</div>
-			<ol class="col-xs-7 verse-analysis__word-parts">
+			<ol class="col-xs-6 verse-analysis__word-parts">
 				@foreach (var wordPart in word.WordParts)
 				{
 					<li class="verse-analysis__word-part">
