--- a/QuranX.Web/Views/VerseAnalysis/Index.cshtml
+++ b/QuranX.Web/Views/VerseAnalysis/Index.cshtml
@@ -19,14 +19,11 @@
 	{
 		string wordUrl = Url.RouteUrl("WordAnalysis", new { Word = QuranX.Web.ArabicHelper.Standardize(word.Arabic) });
 		<li class="verse-analysis__word row">
-			<a name="Word_@(Model.Chapter.ChapterNumber)_@(Model.VerseNumber)_(@word.WordNumber)"></a>
 			<div class="col-xs-6 verse-analysis__word-reference">
 				@Model.Chapter.ChapterNumber.@Model.VerseNumber.@word.WordNumber
 			</div>
 			<div class="col-xs-6 verse-analysis__word-image">
-				<a href="@wordUrl	">
-					<img src="~/Content/Images/ArabicWords/@(Html.GetHexValues(word.Buckwalter)).png" alt="@word.Buckwalter" />
-				</a>
+				<img src="~/Content/Images/ArabicWords/@(Html.GetHexValues(word.Buckwalter)).png" alt="@word.Buckwalter" />
 			</div>
 			<div class="col-xs-6 verse-analysis__word-text">
 				<div class="verse-analysis__word-text-buckwalter">
@@ -54,7 +51,7 @@
 									routeName: "RootAnalysis",
 									routeValues: new
 									{
-										Root = QuranX.Web.ArabicHelper
+										RootLetterNames = QuranX.Web.ArabicHelper
 											.ArabicToLetterNames(wordPart.Root)
 									}
 								)
